--- a/public/stylesheet/adminSell.css
+++ b/public/stylesheet/adminSell.css
@@ -176,11 +176,22 @@ body[data-theme="dark"] {
   .description{
     padding: 8px 10px;
   }
-  .description div{
+  /*fix overflow text*/
+  .description > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+  .post-title {
+    width: 120px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin: 0;
+    flex-shrink: 0;
   }
+
+  
   .dropdown{
     padding-right: 5px;
   }
