--- a/public/stylesheet/adoption.css
+++ b/public/stylesheet/adoption.css
@@ -161,6 +161,17 @@ select {
 .description{
   padding: 8px 10px;
 }
+/*fix overflow text*/
+.post-title {
+  width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin: 0;
+  flex-shrink: 0;
+}
+
+
 .money{
   font-size: 14px;
   font-weight: 400;
